Adding in clinical file generation, more configuration

--- a/build.conf
+++ b/build.conf
@@ -1,11 +1,13 @@
 
 
-export TMPDIR=/scratch/tmp
+export TMPDIR=/tmp
 export PATH=$HOME/bin:$PATH
 WORKDIR=./work
-MIRROR=./mirror
+DATADIR=./data
+MIRROR=/inside/depot
+OUTDIR=./out
 
 SUBMIT_EXE=bash
 ##the qsub version
-#SUBMIT_EXT=qsub
+#SUBMIT_EXE=qsub
 CANCER_LIST=tcga_cancer.list
